fix tax alignment in email

--- a/skin/frontend/default/default/css/styles2.css
+++ b/skin/frontend/default/default/css/styles2.css
@@ -1207,7 +1207,7 @@ tr.summary-details-excluded { font-style:italic; }
 .cart .shipping .sp-methods { margin:10px 0 0; padding:5px 0 0; background:url(../images/bkg_divider1.gif) 0 0 repeat-x; }
 
 /* Shopping Cart Totals */
-.cart .totals { float:right; width:268px; background:#dee5e8; border:1px solid #bebcb7; }
+.cart .totals { float:right; width:auto; background:#dee5e8; border:1px solid #bebcb7; } /* old width 263 */
 .cart .totals table { width:100%; margin:7px 0; }
 .cart .totals td { padding:1px 15px 1px 7px; }
 .cart .totals tr.last td {}
